fixed nsv scss so it doesnt overlap on the bottom of the page

--- a/sass/config.scss
+++ b/sass/config.scss
@@ -39,3 +39,7 @@ $component-light-shadow: 0px 0.4rem 0.5rem 0;
 $pad-standard: 1rem;
 $margin-standard: 2rem;
 $radius-minimal: 0.3rem;
+
+//for nav header to not overlap body when scrolled to the bottom of page
+$min-height: 100%;
+$padding-bottom:50px;
