--- a/src/containers/CalendarView/CalendarView.scss
+++ b/src/containers/CalendarView/CalendarView.scss
@@ -5,6 +5,8 @@ $primary-color: #3E3C3B;
 
 .calender-container{
   width: 100%;
+  min-height: 100%;
+  padding-bottom:50px;
 
 .title{
   text-align: center;
